[package]
name = "space-fleet-comander"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.11.2"
bevy-inspector-egui = "0.19.0"
bevy_mod_picking = {git= "https://github.com/aevyrie/bevy_mod_picking.git", features = ["all"] }
bevy_xpbd_3d = "0.2.0"
futures-lite = "1.13.0"
oxidized_navigation = {git = "https://github.com/TheGrimsey/oxidized_navigation.git", features = ["debug_draw", "xpbd"]}

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
